--- a/DataScienceFem/assets/css/style.css
+++ b/DataScienceFem/assets/css/style.css
@@ -3008,6 +3008,20 @@ textarea.form-control.is-valid {
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0.25rem;
 }
+.btn-rounded:hover span {
+  background-color: rgba(0, 0, 0, 0.6); 
+}
+.btn-rounded span {
+  position: absolute;
+  background-color: #721f54;
+  width: 2.5rem;
+  height: 2.5rem;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+
+}
 
 .was-validated :invalid~.invalid-feedback,
 .was-validated :invalid~.invalid-tooltip,
@@ -3138,17 +3152,17 @@ fieldset:disabled .btn {
   opacity: 0.65;
 }
 
-.btn-primary {
+/* .btn-primary {
   color: #fff;
   background-color: #9926f0;
   border-color: #9926f0;
-}
+} */
 
-.btn-primary:hover {
+/* .btn-primary:hover {
   color: #fff;
   background-color: #8220cc;
   border-color: #7a1ec0;
-}
+} */
 
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
@@ -3158,23 +3172,14 @@ fieldset:disabled .btn {
   box-shadow: 0 0 0 0.25rem rgba(168, 71, 242, 0.5);
 }
 
-.btn-check:checked+.btn-primary,
-.btn-check:active+.btn-primary,
-.btn-primary:active,
-.btn-primary.active,
-.show>.btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #7a1ec0;
-  border-color: #731db4;
-}
 
 .btn-check:checked+.btn-primary:focus,
 .btn-check:active+.btn-primary:focus,
 .btn-primary:active:focus,
 .btn-primary.active:focus,
 .show>.btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(168, 71, 242, 0.5);
-}
+  box-shadow: 0 0 0 0.25rem #721f54;
+} 
 
 .btn-primary:disabled,
 .btn-primary.disabled {
@@ -3189,11 +3194,6 @@ fieldset:disabled .btn {
   border-color: #d122e3;
 }
 
-.btn-secondary:hover {
-  color: #000;
-  background-color: #d843e7;
-  border-color: #d638e6;
-}
 
 .btn-check:focus+.btn-secondary,
 .btn-secondary:focus {
@@ -11679,17 +11679,6 @@ fieldset:disabled .btn {
   border: 0.1rem solid rgba(255, 255, 255, 0.6);
   background-color: #fff;
   display: block;
-}
-
-.btn-rounded span {
-  position: absolute;
-  background-color: #9926f0;
-  width: 2.5rem;
-  height: 2.5rem;
-  top: 50%;
-  right: 5px;
-  transform: translateY(-50%);
-  border-radius: 50%;
 }
 
 .btn-rounded span i {
