--- a/DataScienceFem/assets/css/style.css
+++ b/DataScienceFem/assets/css/style.css
@@ -22,7 +22,7 @@
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
-  --bs-pink: #d122e3;
+  --bs-pink: #07726d;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
@@ -33,7 +33,7 @@
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
   --bs-primary: #9926f0;
-  --bs-secondary: #d122e3;
+  --bs-secondary: #07726d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -244,12 +244,12 @@ sup {
 }
 
 a {
-  color: #9926f0;
+  color: #07726d;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #7a1ec0;
+  color: #07726d;
 }
 
 a:not([href]):not([class]),
@@ -624,7 +624,7 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
+  max-width: 75%;
   height: auto;
 }
 
@@ -3011,17 +3011,7 @@ textarea.form-control.is-valid {
 .btn-rounded:hover span {
   background-color: rgba(0, 0, 0, 0.6); 
 }
-.btn-rounded span {
-  position: absolute;
-  background-color: #721f54;
-  width: 2.5rem;
-  height: 2.5rem;
-  top: 50%;
-  right: 5px;
-  transform: translateY(-50%);
-  border-radius: 50%;
 
-}
 
 .was-validated :invalid~.invalid-feedback,
 .was-validated :invalid~.invalid-tooltip,
@@ -3499,19 +3489,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #9926f0;
-  border-color: #9926f0;
+  color: #07726d;
+  border-color: #07726d;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #9926f0;
-  border-color: #9926f0;
+  background-color: #07726d;
+  border-color: #07726d;
 }
 
 .btn-check:focus+.btn-outline-primary,
 .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(153, 38, 240, 0.5);
+  box-shadow: 0 0 0 0.25rem #07726d;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -3520,8 +3510,8 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #9926f0;
-  border-color: #9926f0;
+  background-color: #07726d;
+  border-color: #07726d;
 }
 
 .btn-check:checked+.btn-outline-primary:focus,
@@ -3529,7 +3519,7 @@ fieldset:disabled .btn {
 .btn-outline-primary:active:focus,
 .btn-outline-primary.active:focus,
 .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(153, 38, 240, 0.5);
+  box-shadow: 0 0 0 0.25rem #07726d;
 }
 
 .btn-outline-primary:disabled,
@@ -3539,14 +3529,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-secondary {
-  color: #d122e3;
-  border-color: #d122e3;
+  color: #721f54;
+  border-color: #721f54;
 }
 
 .btn-outline-secondary:hover {
   color: #000;
-  background-color: #d122e3;
-  border-color: #d122e3;
+  background-color: #721f54;
+  border-color: #721f54;
 }
 
 .btn-check:focus+.btn-outline-secondary,
@@ -3574,7 +3564,7 @@ fieldset:disabled .btn {
 
 .btn-outline-secondary:disabled,
 .btn-outline-secondary.disabled {
-  color: #d122e3;
+  color: #07726d;
   background-color: transparent;
 }
 
@@ -3825,7 +3815,7 @@ fieldset:disabled .btn {
 }
 
 .btn-link:hover {
-  color: #7a1ec0;
+  color: #721f54;
 }
 
 .btn-link:disabled,
@@ -4364,7 +4354,7 @@ fieldset:disabled .btn {
 
 .nav-link:hover,
 .nav-link:focus {
-  color: #7a1ec0;
+  color: #721f54;
 }
 
 .nav-link.disabled {
@@ -5041,7 +5031,7 @@ fieldset:disabled .btn {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #8a22d8;
+  color: #07726d;
   background-color: #f5e9fe;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
@@ -5075,7 +5065,7 @@ fieldset:disabled .btn {
 
 .accordion-button:focus {
   z-index: 3;
-  border-color: #cc93f8;
+  border-color: #07726D;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(153, 38, 240, 0.25);
 }
@@ -5178,7 +5168,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #9926f0;
+  color: #07726d;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -5193,14 +5183,14 @@ fieldset:disabled .btn {
 
 .page-link:hover {
   z-index: 2;
-  color: #7a1ec0;
+  color: #07726d;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 
 .page-link:focus {
   z-index: 3;
-  color: #7a1ec0;
+  color: #07726d;
   background-color: #e9ecef;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(153, 38, 240, 0.25);
@@ -7343,7 +7333,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #9926f0 !important;
+  border-color: #721f54 !important;
 }
 
 .border-secondary {
@@ -11728,7 +11718,7 @@ fieldset:disabled .btn {
   height: 0.1rem;
   display: block;
   margin: 0 auto;
-  background-color: #9926f0;
+  background-color: #07726D;
 }
 
 .heading-line::after {
@@ -11739,7 +11729,7 @@ fieldset:disabled .btn {
   display: block;
   margin: 0 auto;
   margin-bottom: 1rem;
-  background-color: #9926f0;
+  background-color: #07726D;
 }
 
 .display-3 {
@@ -11752,7 +11742,7 @@ fieldset:disabled .btn {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   display: inline-block;
-  background-image: linear-gradient(to right, #9926f0, #d122e3);
+  background-image: linear-gradient(to right, #07726d, #07726d);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -11884,7 +11874,7 @@ fieldset:disabled .btn {
 
 .services__content .icon {
   font-size: 1.5rem;
-  color: #9926f0;
+  color: #07726d;
 }
 
 @media (min-width: 992px) {
@@ -11900,7 +11890,7 @@ fieldset:disabled .btn {
 .testimonials {
   position: relative;
   padding: 0;
-  background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
+  background: #721f54;
 }
 
 .testimonials__card {
@@ -11913,11 +11903,11 @@ fieldset:disabled .btn {
 
 .testimonials__card i {
   font-size: 1.5rem;
-  color: rgba(153, 38, 240, 0.7);
+  color: #07726d;
 }
 
 .testimonials__card .ratings i {
-  color: rgba(153, 38, 240, 0.7);
+  color: #07726d;
   font-size: 1rem;
 }
 
@@ -11930,7 +11920,7 @@ fieldset:disabled .btn {
 }
 
 .testimonials__picture img {
-  border: 0.325rem solid rgba(153, 38, 240, 0.7);
+  border: 0.325rem solid #07726D;
 }
 
 .testimonials__name {
@@ -11965,7 +11955,7 @@ fieldset:disabled .btn {
   height: 18.5rem;
   overflow: hidden;
   margin-bottom: 1.2rem;
-  border-top: 0.5rem solid #c685f7;
+  border-top: 0.5rem solid #07726D;
 }
 
 .portfolio-box img {
@@ -11974,7 +11964,7 @@ fieldset:disabled .btn {
 }
 
 .portfolio-box .portfolio-info {
-  background-color: rgba(153, 38, 240, 0.75);
+  background-color: #07726D;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -12056,7 +12046,7 @@ fieldset:disabled .btn {
 
 .footer {
   padding-top: 1rem;
-  background-color: #151414;
+  background-color: #721f54;
 }
 
 .contact-box {
@@ -12120,7 +12110,7 @@ fieldset:disabled .btn {
 }
 
 .footer-sm a:hover {
-  color: #9926f0;
+  color: #721f54;
 }
 
 .campany-list {
@@ -12140,11 +12130,11 @@ fieldset:disabled .btn {
 }
 
 .campany-list li a:hover {
-  color: #9926f0;
+  color: #721f54;
 }
 
 .footer-bottom {
-  background-color: #000;
+  background-color:#721f54;
 }
 
 .footer-bottom__copyright {
@@ -12158,7 +12148,7 @@ fieldset:disabled .btn {
 }
 
 .footer-bottom__copyright a:hover {
-  color: #9926f0;
+  color: #721f54;
   text-decoration: underline;
 }
 
