--- a/DataScienceFem/assets/css/style.css
+++ b/DataScienceFem/assets/css/style.css
@@ -3157,9 +3157,9 @@ fieldset:disabled .btn {
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
   color: #fff;
-  background-color: #8220cc;
-  border-color: #7a1ec0;
-  box-shadow: 0 0 0 0.25rem rgba(168, 71, 242, 0.5);
+  background-color: #721f54;
+  border-color: #721f54;
+  box-shadow: 0 0 0 0.25rem #721f54;
 }
 
 
